--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,5 +1,7 @@
-<h2>Edit Your Business</h2>
+<section class="business-form">
+  <h2>Edit Your Business</h2>
 
-<small>* Please Note: it will take 24 hours for edits to be reviewed by a moderator.</small>
+  <small>* Please Note: it will take 24 hours for edits to be reviewed by a moderator.</small>
 
-<%= render partial: 'form', locals: { business: @business, verb: "Edit" } %>
+  <%= render partial: 'form', locals: { business: @business, verb: "Edit" } %>
+</section>
