--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,3 +1,5 @@
-<h2>Add a Business</h2>
+<section class="business-form">
+  <h2>Add a Business</h2>
 
-<%= render partial: 'form', locals: { business: @business, verb: 'Add' } %>
+  <%= render partial: 'form', locals: { business: @business, verb: 'Add' } %>
+</section>
