--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
     <em><%= render "shared/notices" %></em>
   <% end %>
 
-  <div class="content">
+  <div class="content group">
     <%= yield %>
   </div>
 
